@@ -50,6 +50,15 @@ ECL 12.2.2:
    customize how these interrupts are caught. SET-INTERRUPT-HANDLER runs an
    implicit EXT:CATCH-SIGNAL.
 
+* Windows:
+
+ - ECL guesses whether the input / output / error streams are consoles. If
+   so, it sets up a special type of stream that copes with the deficiencies
+   of read()/write() and similar functions on consoles -- namely that they
+   may read or write a larger number of bytes than demanded because they
+   translate the input/output to and from the corresponding codepage.
+   (EXPERIMENTAL)
+
 * Metaobject protocol:
 
  - Implemented CLOS:COMPUTE-APPLICABLE-METHODS-USING-CLASSES.
